# kaltura-player-rn

./: .eslintrc.js  .gitignore  .npmignore  .prettierrc.js  App.js  CONTRIBUTING.md  LICENSE  README.md  RNKPInitOptions.swift  RNKalturaPlayer.podspec  String+Dictionary.swift  app.json  kaltura-player-rn.podspec  package.json  react-native-kaltura-player.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  gradlew  settings.gradle
android/app/: BUCK  build.gradle
android/app/src/debug/java/com/kalturaplayerrn/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/kalturaplayerrn/: CalendarModule.java  CalendarPackage.java  CalenderPackage.java  KalturaPlayerModule.java  KalturaPlayerPackage.java  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: PlayerJSIHostObject.cpp  PlayerJSIHostObject.h  cpp-adapter.cpp
android/src/main/java/com/kalturaplayerrn/: KalturaPlayerRnPackage.java  KalturaPlayerRnViewManager.java  PKDownloadWrapper.java  PKPlayerWrapper.java  PlayerJSIModulePackage.java  PlayerModule.java  PlayerView.java
android/src/main/java/com/kalturaplayerrn/model/: InitOptions.java  MediaAsset.java  NetworkSettings.java  (+7 more)
android/src/main/java/com/reactnativekalturaplayer/: KalturaPlayerModule.java  KalturaPlayerModule.kt  KalturaPlayerPackage.java  KalturaPlayerPackage.kt  KalturaPlayerRN.kt  KalturaPlayerRNView.java  KalturaPlayerViewManager.java  KalturaPlayerViewManager.kt
(+166 files in other folders)
